# gbx_cropping

./: README.md
camera/hk_camera/: CMakeLists.txt  package.xml
camera/rm_msgs/: CMakeLists.txt
dataset/: README.md
dataset/scripts/: chaneg_num.py  merge_datasets.py  resort_label.py  whole_images_montage.py
gbx_cropping/: CMakeLists.txt  gbx_cropping.xml  package.xml
gbx_cropping/cfg/: ImageProcessing.cfg
gbx_cropping/include/gbx_cropping/: gbx_cropping.h  gbx_cropping_whole.h
gbx_cropping/launch/: gbx_cropping.launch
gbx_cropping/src/: gbx_cropping.cpp
image_preprocessing/: preprocessing_inference.py
image_preprocessing/gbx_cropping/: CMakeLists.txt  gbx_cropping.xml  package.xml
image_preprocessing/gbx_cropping/cfg/: ImageProcessing.cfg  ImageProcessingWhole.cfg
image_preprocessing/gbx_cropping/include/gbx_cropping/: gbx_cropping.h
image_preprocessing/gbx_cropping/src/: gbx_cropping_whole.cpp
image_tools/: CMakeLists.txt  package.xml
image_tools/image_preprocessing/: image_preprocessing.py
image_tools/image_preprocessing/results/: predictions.json
image_tools/only_fifteen/: feature_extraction_regression.py  frozen_cnn_train.py  image_train.py
image_tools/only_fifteen/raw_images_90/: chaneg_num.py
image_tools/only_fifteen/raw_images_90/data/: raw_data.csv
image_tools/second_batch_of_samples/: frozen_cnn_train.py  inference.py  make_labels.py
image_tools/second_batch_of_samples/whole_second_batch_fifteen_samples/cropping/data/: second_batch_of_samples.csv
image_tools/second_batch_of_samples/whole_second_batch_fifteen_samples/raw_images/: chaneg_num.py
image_tools/second_batch_of_samples/with_first_batch_fifteen_samples/dataset/: labels_inference.csv
image_tools/src/: image_cropping.py  image_cropping_window.py  image_dataset.py  image_hand_cropping.py  image_saver.py  image_train.py  image_train_augmenter.py  image_transform.py  model_evaluation.py  model_runner.py
image_tools/src/image_cropping/: image_cropping.py  image_hand_cropping.py  image_saver.py
motor/photo_station_v2/: CMakeLists.txt  package.xml
motor/unified_hw/: CMakeLists.txt  package.xml
motor/unified_hw/include/unified_hw/: control_loop.h  hardware_interface.h
motor/unified_hw/include/unified_hw/can_manager/: can_manager.h
motor/unified_hw/include/unified_hw/can_manager/can_devices/: can_actuator.h  can_device.h  can_dm_actuator.h  can_rm_actuator.h
motor/unified_hw/include/unified_hw/common/: imu_complementary_filter.h  math_utilities.h
motor/unified_hw/include/unified_hw/hardware_interface/: actuator_calibration_interface.h
motor/unified_hw/src/: control_loop.cpp  hardware_interface.cpp  unified_hw.cpp
motor/unified_hw/src/can_manager/: can_manager.cpp
motor/unified_hw/src/can_manager/can_devices/: can_dm_actuator.cpp  can_rm_actuator.cpp
motor/unified_hw/src/can_manager/can_interface/: can_bus.cpp  socketcan.cpp
motor/unified_hw/src/common/: imu_complementary_filter.cpp  imu_filter_base.cpp  lp_filter.cpp
motor/unified_hw/test/: controllers.yaml  hw.yaml  load_controller.launch  load_hw.launch  test.xacro
paper/: evaluate.py  train.py
paper/dataset/: computer_mean_std.py  datasets.py  generator_dataset.py  transforms.py  visualize_transform_pipeline.py
runner/: CMakeLists.txt  circle_detector.py  model_evaluation.py  nodelet_plugins.xml  package.xml
runner/cfg/: ExtractPP.cfg  FoamStitch.cfg
runner/include/runner/: extract_pp_nodelet.h  foam_stitch_nodelet.h
runner/launch/: extract_pp.launch  extract_pp_nodelet.launch  foam_stitcher_nodelet.launch
runner/pure/: undistort_extract_pp.py
runner/pure/unit_test/: extract_pp_board.py
runner/scripts/: image_cropping.py  image_cropping_inference.py  model_evaluation.py  photo_capture.py  photo_stick.py  point_stick.py
runner/scripts/apriltag/: apriltag_detector.py
runner/scripts/blackpoint/: circle_detector.py
runner/scripts/blackyellow/: yellow_detector.py
runner/scripts/brightness/: predict.py
runner/scripts/brightness/images/cs020/12mm/output_light_gauss_gamma/: prediction_results.txt
runner/scripts/brightness/images/cs020/8mm/output/: prediction_results.txt
runner/scripts/brightness/images/cs050/12mm/output/: prediction_results.txt
runner/scripts/brightness/images/cs050/8mm/output/: prediction_results.txt
runner/scripts/brightness/images/cs050/8mm/output_light_gauss/: prediction_results.txt
runner/scripts/gamma/: test_gamma.py
runner/scripts/pure/: extract_pp_direct.py  extract_pp_nodelet.py  ros_high_undistort_extract_pp.py
runner/scripts/pure/unit_test/: extract_light_panel.py
runner/scripts/test/brightness/: predict.py
runner/scripts/test/brightness/images/cs020/12mm/output/: prediction_results.txt
runner/scripts/test/brightness/images/cs020/8mm/output_light_gauss/: prediction_results.txt
runner/scripts/test/brightness/images/cs050/12mm/output_light_gauss/: prediction_results.txt
runner/scripts/test/brightness/images/cs050/8mm/output_light_gauss_gamma/: prediction_results.txt
runner/scripts/test/brightness/images/pure/output/: prediction_results.txt
runner/scripts/test/four_images/cropping/: crop_info.txt
runner/scripts/test/sticker/apriltag/: apriltag_detector.py  apriltag_polygon.json  apriltag_user.py  print_apriltag_detector.py  uv_apriltag_detector.py
runner/scripts/test/sticker/arcuotag/: arcuotag_detector.py
runner/scripts/test/sticker/blackpoint/: photo_stick.py
runner/scripts/test/sticker/checkerboard/: checkerboard_detector.py
runner/scripts/test/sticker/pure/: ros_undistort_extract_pp.py
runner/scripts/test/teture/: test.py
runner/scripts/test/v1tov2/: predict.py
runner/scripts/v1tov2/: predict.py
runner/scripts/v1tov2/single_test/output/: prediction_results.txt
runner/scripts/v2tov2_test/image_compare/: compare.py
runner/src/: extract_pp_nodelet.cpp  foam_stitch_nodelet.cpp
runner/src/runner/: extract_pp_nodelet.py  ros_high_undistort_extract_pp.py
train/: datasets.py  frozen_cnn_train.py  inference.py  losses.py  models.py  train.py  trainer.py  transforms.py  utils.py  visualization.py
(+46 files in other folders)
