<?xml version="1.0"?>
<package format="2">
  <name>gbx_cropping</name>
  <version>0.0.0</version>
  <description>The gbx_cropping package</description>

  <maintainer email="liusiyang.cn@gmail.com">4yang</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
    <nodelet plugin="${prefix}/gbx_cropping.xml"/>
  </export>
</package>
