<?xml version="1.0"?>
<package format="2">
  <name>image_tools</name>
  <version>0.0.1</version>
  <description>A simple image handling tool for saving images from a ROS topic.</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <!-- 依赖 -->
  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>

  <!-- 扩展依赖 -->
  <exec_depend>python3</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
</package>