<?xml version="1.0"?>
<package format="2">
    <name>runner</name>
    <version>0.0.1</version>
    <description>Multi-module image processing package with nodelet support</description>

    <maintainer email="your_email@example.com">Your Name</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>rospy</build_depend>
    <build_depend>cv_bridge</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>nodelet</build_depend>
    <build_depend>pluginlib</build_depend>
    <build_depend>image_transport</build_depend>

    <exec_depend>rospy</exec_depend>
    <exec_depend>cv_bridge</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>nodelet</exec_depend>
    <exec_depend>pluginlib</exec_depend>
    <exec_depend>image_transport</exec_depend>
    <depend>dynamic_reconfigure</depend>
    <export>
        <nodelet plugin="${prefix}/nodelet_plugins.xml"/>
    </export>
</package>
